[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqc_vocus"
dist-name = "yaqc-vocus"
author = "Blaise Thompson"
author-email = "blaise.thompson@wisc.edu"
home-page = "https://github.com/uw-madison-chem-shops/yaqc-vocus"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = ["appdirs",
            "attune",
            "click",
            "numexpr",
	    "pyqtgraph",
	    "pyside2",
	    "pyserial",
	    "qtpy",
	    "toml",
	    "yaqc",
            "tidy_headers",
            "yaqc-qtpy",
	    ]

[tool.flit.scripts]
yaqc-vocus = "yaqc_vocus.__main__:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
